[gd_scene load_steps=4 format=3 uid="uid://x0ejjovjgvqq"]

[ext_resource type="FontFile" uid="uid://c5n0dcrx4814y" path="res://HUD/Art Assets/PetitePx.ttf" id="1_fb55l"]
[ext_resource type="Script" path="res://Levels/Tutorial/sign.gd" id="1_possp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_semjf"]
size = Vector2(27.5, 18)

[node name="Sign" type="Area2D"]
script = ExtResource("1_possp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(21.25, 35)
shape = SubResource("RectangleShape2D_semjf")

[node name="SignLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = -15.0
offset_right = 108.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("1_fb55l")
theme_override_font_sizes/font_size = 21
text = "
"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
